Fix: Consultation mobile UI fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,7 @@ body,
   width: 100%;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 body {
